--- a/frontend-ifn/src/styles/_variables.scss
+++ b/frontend-ifn/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Culori
-$primary-color: #000000;
+$primary-color: #0e0e0e;
 $secondary-color: #e6e6e6;
-$accent-color: #3b82f6;
+$accent-color: #0000ee;
 $background-color: #ffffff;
 $text-color: #333333;
 $link-color: #0000ee;
@@ -38,3 +38,10 @@ $line-height: 1.6;
 
 // Adăugați sau modificați următoarele variabile
 $border-color: #e5e7eb;
+
+// Breakpoints
+$breakpoint-small: 576px;
+$breakpoint-medium: 768px;
+$breakpoint-large: 992px;
+$breakpoint-xlarge: 1200px;
+$breakpoint-ylarge: 1024px;
