--- a/frontend-ifn/src/styles/_global.scss
+++ b/frontend-ifn/src/styles/_global.scss
@@ -1,9 +1,14 @@
+@import "variables";
+@import "mixins";
+
+// Reset CSS
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+// Stiluri generale pentru body și html
 html,
 body {
   font-family: $primary-font;
@@ -13,11 +18,177 @@ body {
   line-height: $line-height;
 }
 
+// Link-uri
 a {
   color: $link-color;
   text-decoration: none;
+  @include transition(color);
 
   &:hover {
     color: darken($link-color, 10%);
+  }
+}
+
+// Container
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 $medium-spacing;
+
+  @include breakpoint(large) {
+    padding: 0 $large-spacing;
+  }
+}
+
+// Butoane
+.button {
+  display: inline-block;
+  padding: $small-spacing $medium-spacing;
+  background-color: $primary-color;
+  color: $background-color;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: $font-weight-bold;
+  @include transition;
+
+  &:hover {
+    background-color: lighten($primary-color, 10%);
+  }
+
+  &.secondary {
+    background-color: $secondary-color;
+    color: $text-color;
+
+    &:hover {
+      background-color: darken($secondary-color, 10%);
+    }
+  }
+}
+
+// Formulare
+input,
+textarea,
+select {
+  width: 100%;
+  padding: $small-spacing;
+  margin-bottom: $small-spacing;
+  border: 1px solid $secondary-color;
+  border-radius: 4px;
+  font-family: $primary-font;
+  font-size: $font-size-medium;
+  @include transition(border-color);
+
+  &:focus {
+    outline: none;
+    border-color: $accent-color;
+  }
+}
+
+// Headings
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $secondary-font;
+  font-weight: $font-weight-bold;
+  margin-bottom: $medium-spacing;
+  color: $text-color;
+}
+
+// Paragrafe
+p {
+  margin-bottom: $medium-spacing;
+}
+
+// Liste
+ul,
+ol {
+  margin-bottom: $medium-spacing;
+  padding-left: $large-spacing;
+}
+
+// Imagini responsive
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+// Clase utilitare
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
+// Clase pentru spațiere
+.mt-1 {
+  margin-top: $small-spacing;
+}
+.mt-2 {
+  margin-top: $medium-spacing;
+}
+.mt-3 {
+  margin-top: $large-spacing;
+}
+
+.mb-1 {
+  margin-bottom: $small-spacing;
+}
+.mb-2 {
+  margin-bottom: $medium-spacing;
+}
+.mb-3 {
+  margin-bottom: $large-spacing;
+}
+
+// Clase pentru flexbox
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
+// Clase pentru grid
+.grid {
+  display: grid;
+  gap: $medium-spacing;
+}
+
+// Responsive typography
+@include breakpoint(small) {
+  html,
+  body {
+    font-size: $font-size-small;
+  }
+}
+
+@include breakpoint(large) {
+  html,
+  body {
+    font-size: $font-size-medium;
   }
 }
