update stiluri si app.tsx

--- a/frontend-ifn/src/components/Layout/Layout.scss
+++ b/frontend-ifn/src/components/Layout/Layout.scss
@@ -9,21 +9,21 @@
 
   &__main {
     flex: 1;
-    margin-left: 0;
+    margin-left: 350px; // Lățimea sidebar-ului deschis
     transition: margin-left 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
 
     @include breakpoint(small) {
-      margin-left: 90px;
+      margin-left: 60px; // Ajustăm pentru sidebar-ul închis
     }
 
     @include breakpoint(medium) {
-      margin-left: 70px;
+      margin-left: 60px; // Ajustăm pentru sidebar-ul închis
     }
 
     @include breakpoint(large) {
-      margin-left: 350px;
+      margin-left: 350px; // Păstrăm pentru sidebar-ul deschis
     }
 
     @include breakpoint(xlarge) {
@@ -38,7 +38,7 @@
   &__content {
     padding: $medium-spacing;
     flex: 1;
-    margin-top: 60px; // Adăugăm un margin-top pentru a evita suprapunerea cu navbar-ul
+    margin-top: 60px; // Înălțimea navbar-ului
 
     @include breakpoint(small) {
       // Ajustări pentru ecrane mici
@@ -88,27 +88,7 @@
 
   &.sidebar-closed {
     .layout__main {
-      margin-left: 70px;
-
-      @include breakpoint(small) {
-        margin-left: 90px;
-      }
-
-      @include breakpoint(medium) {
-        margin-left: 70px;
-      }
-
-      @include breakpoint(large) {
-        // Ajustări pentru ecrane mari
-      }
-
-      @include breakpoint(xlarge) {
-        // Ajustări pentru ecrane foarte mari
-      }
-
-      @include breakpoint(ylarge) {
-        // Ajustări pentru ecrane extra mari
-      }
+      margin-left: 60px; // Lățimea sidebar-ului închis
     }
   }
 }
@@ -116,7 +96,7 @@
 .navbar {
   position: fixed;
   top: 0;
-  left: 0;
+  left: 350px; // Lățimea sidebar-ului deschis
   right: 0;
   height: 60px;
   z-index: 999;
@@ -143,27 +123,7 @@
   }
 
   .layout.sidebar-closed & {
-    left: 70px;
-
-    @include breakpoint(small) {
-      left: 90px;
-    }
-
-    @include breakpoint(medium) {
-      left: 70px;
-    }
-
-    @include breakpoint(large) {
-      // Ajustări pentru ecrane mari
-    }
-
-    @include breakpoint(xlarge) {
-      // Ajustări pentru ecrane foarte mari
-    }
-
-    @include breakpoint(ylarge) {
-      // Ajustări pentru ecrane extra mari
-    }
+    left: 60px; // Lățimea sidebar-ului închis
   }
 }
 
