--- a/frontend-ifn/src/styles/_variables.scss
+++ b/frontend-ifn/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: #0e0e0e;
 $secondary-color: #e6e6e6;
 $accent-color: #0000ee;
+$tertiary-color: #ff9633;
 $background-color: #ffffff;
 $text-color: #333333;
 $link-color: #0000ee;
@@ -39,9 +40,16 @@ $line-height: 1.6;
 // Adăugați sau modificați următoarele variabile
 $border-color: #e5e7eb;
 
+// Dimensiuni pentru butoane
+$button-width: 150px;
+$button-height: 40px; // Adăugăm această linie pentru înălțimea butonului
+
 // Breakpoints
 $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 992px;
 $breakpoint-xlarge: 1200px;
 $breakpoint-ylarge: 1024px;
+
+// Adăugați această linie la sfârșitul fișierului, păstrând restul neschimbat
+$code-font: "Courier New", Courier, monospace;
