--- a/frontend-ifn/src/styles/main.scss
+++ b/frontend-ifn/src/styles/main.scss
@@ -7,7 +7,7 @@
 @import "typography";
 @import "layout";
 
-// Importăm stilurile componentelor (puteți adăuga sau elimina în funcție de nevoile proiectului)
+// Importăm stilurile componentelor
 @import "../components/Navbar/Navbar";
 @import "../components/Sidebar/Sidebar";
 @import "../components/Layout/Layout";
@@ -15,26 +15,22 @@
 @import "../components/Navbar/NotificationsButton";
 @import "../components/Navbar/UserMenuButton";
 
-// Importăm stiluri pentru pagini specifice (adăugați sau eliminați în funcție de nevoile proiectului)
-@import "../pages/Dashboard";
-@import "../pages/Accounting";
-@import "../pages/Financial";
-@import "../pages/Commercial";
-@import "../pages/CreditManagement";
-@import "../pages/Reports";
-
-// Importăm stiluri pentru teme (dacă aveți mai multe teme)
-@import "themes/default";
-// @import 'themes/dark';  // Decomentați dacă aveți o temă întunecată
+// Importăm stiluri pentru pagini specifice (comentate până când fișierele sunt create)
+// @import "../pages/Dashboard";
+// @import "../pages/Accounting";
+// @import "../pages/Financial";
+// @import "../pages/Commercial";
+// @import "../pages/CreditManagement";
+// @import "../pages/Reports";
 
 // Importăm stiluri pentru utilități
 @import "utilities";
 
 // Importăm stiluri pentru animații (dacă este cazul)
-@import "animations";
+// @import "animations";
 
 // Importăm stiluri pentru print (dacă este necesar)
-@import "print";
+// @import "print";
 
 // Adăugați aici orice alte importuri specifice proiectului dumneavoastră
 
