--- a/frontend-ifn/src/styles/_variables.scss
+++ b/frontend-ifn/src/styles/_variables.scss
@@ -53,3 +53,5 @@ $breakpoint-ylarge: 1024px;
 
 // Adăugați această linie la sfârșitul fișierului, păstrând restul neschimbat
 $code-font: "Courier New", Courier, monospace;
+
+$button-border-radius: 10px;
