--- a/frontend-ifn/src/components/Navbar/Navbar.scss
+++ b/frontend-ifn/src/components/Navbar/Navbar.scss
@@ -3,7 +3,7 @@
 
 .navbar {
   @include navbar-style;
-  height: 60px; // Setăm o înălțime fixă pentru navbar
+  height: 60px;
 
   &__container {
     display: flex;
