--- a/frontend-ifn/src/styles/_variables.scss
+++ b/frontend-ifn/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $primary-color: #0e0e0e;
 $secondary-color: #e6e6e6;
 $accent-color: #0000ee;
 $tertiary-color: #ff9633;
+$fourth-color: #28c76f;
 $background-color: #ffffff;
 $text-color: #333333;
 $link-color: #0000ee;
