--- a/frontend-ifn/src/styles/_global.scss
+++ b/frontend-ifn/src/styles/_global.scss
@@ -21,6 +21,33 @@ body {
 
 body {
   overflow-y: auto; // Schimbăm din 'hidden' în 'auto'
+
+  // Stilizare scrollbar pentru body
+  &::-webkit-scrollbar {
+    width: 1px; // Scrollbar extrem de subțire
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: transparent; // Scrollbar complet transparent
+  }
+
+  // Ascundem scrollbar-ul când nu este folosit
+  &::-webkit-scrollbar-thumb:vertical {
+    display: none;
+  }
+
+  &:hover::-webkit-scrollbar-thumb:vertical {
+    display: block;
+    background-color: rgba($text-color, 0.1); // Ușor vizibil la hover
+  }
+
+  // Stiluri pentru Firefox
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
 }
 
 // Link-uri
